@@ -1,10 +1,6 @@
 ## Process this file with Automake to create Makefile.in
 
-SUBDIRS = libm libsdcc/regular
-
-if HAVE_NEW_PICS
-SUBDIRS += libsdcc/enhanced
-endif
+SUBDIRS = libm libsdcc/regular libsdcc/enhanced
 
 include $(top_srcdir)/Makefile.common
 
