@@ -24,7 +24,7 @@ AC_CONFIG_HEADER([config.h])
 NEWPICS=no;
 AC_ARG_ENABLE(
     [new-pics],
-    AS_HELP_STRING([--enable-new-pics], [Enable use of PIC devices added to gputils after the 0.13.7 release. Requires custom-built gputils obtained from their SVN repository!]),
+    AS_HELP_STRING([--enable-new-pics], [Enable use of PIC devices added to gputils after the 0.14.1 release. Requires custom-built gputils obtained from their SVN repository!]),
     [ case "x$enableval" in
       xyes) NEWPICS=yes;
             AC_MSG_NOTICE([Enabling support for PICs from unreleased gputils -- make sure you have up-to-date gputils from SVN.]);;
